--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "tailwindcss": "^1.6.2",
+    "tailwindcss": "^2.1.2",
     "vue": "^3.0.0-0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^3.3.1",
     "@vue/compiler-sfc": "^3.0.0-0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
